--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/124/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/124/index.mdx
@@ -1,10 +1,9 @@
 ---
 slug: /124
-title: "React Hebdo #124: ..."
+title: "React Hebdo #124: FLIP, Lifecycle, Next.js, TypeScript, Vanilla-Extract, LiveView, Remix, GitHub, Race Conditions, Fontpie, Remotion..."
 authors: [slorber]
 date: 11-15-2022
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Salut à tous !
