--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/124/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/124/index.mdx
@@ -144,9 +144,9 @@ Masteos réinvente l’expérience de l’investissement locatif, en proposant u
 
 ## 🇫🇷 En français {#fr}
 
-- [Je code une animation Star Wars en React / Three.js](https://www.youtube.com/watch?v=cYw_old9fqs)
-- [React useState: Ne fais pas cette Erreur](https://www.youtube.com/watch?v=Qyx0ZNUwcnc)
-- [Le moyen le plus simple de faire des formulaires React ](https://www.youtube.com/watch?v=s7B_Wbs-sKw)
+- 🎥 [Je code une animation Star Wars en React / Three.js](https://www.youtube.com/watch?v=cYw_old9fqs)
+- 🎥 [React useState: Ne fais pas cette Erreur](https://www.youtube.com/watch?v=Qyx0ZNUwcnc)
+- 🎥 [Le moyen le plus simple de faire des formulaires React ](https://www.youtube.com/watch?v=s7B_Wbs-sKw)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
 
