--- a/website/src/pages/sponsor.mdx
+++ b/website/src/pages/sponsor.mdx
@@ -191,7 +191,7 @@ This sponsorship ad placement offers a generous ad copy length, near in the firs
 
 ### 🥈 2nd sponsor {#sponsor-2nd}
 
-This sponsorship ad placement appears in the middle of the newsletter, just under the React-Native section.
+This sponsorship ad placement appears in the middle of the newsletter, in between the React and React-Native sections.
 
 <details>
   <summary>Ad constraints and example</summary>
