--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/125/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/125/index.mdx
@@ -9,7 +9,7 @@ unlisted: true
 
 Salut à tous !
 
-<Todo />
+Black friday? todo
 
 <!-- truncate -->
 
@@ -55,15 +55,15 @@ Vous pouvez commencer ici: [flycode.com/developers](https://www.flycode.com/deve
 
 [![The React Native Show - a podcast series](/emails/issues/125/the-rn-show.png)](https://www.callstack.com/podcast-react-native-show?utm_campaign=Podcast&utm_source=email&utm_content=This_Week_in_React)
 
-**[The React Native Show - a podcast series](https://www.callstack.com/podcast-react-native-show?utm_campaign=Podcast&utm_source=email&utm_content=This_Week_in_React)**
+**[The React Native Show - Podcast](https://www.callstack.com/podcast-react-native-show?utm_campaign=Podcast&utm_source=email&utm_content=This_Week_in_React)**
 
-Since you are here, you surely like to stay up to date with the greatest React news ! 🔥 If you want to delve into React and React Native, play the latest episodes of **The React Native Show**:
+Puisque vous êtes ici, vous aimez sûrement rester à jour avec les dernières nouvelles de React ! 🔥 Si vous voulez vous plonger dans React et React Native, écoutez les derniers épisodes du **React Native Show** :
 
-- [Module Federation](https://www.callstack.com/podcasts/module-federation?utm_campaign=Podcast&utm_source=email&utm_content=This_Week_in_React) in React Native, with Zack Jackson, maintainer of Webpack
-- [React Native New Architecture](https://www.callstack.com/podcasts/react-native-new-architecture-ep-17?utm_campaign=Podcast&utm_source=email&utm_content=This_Week_in_React), with Nicola Corti from Meta
-- [React Native at Microsoft](https://www.callstack.com/podcasts/react-native-at-microsoft-ep-16?utm_campaign=Podcast&utm_source=email&utm_content=This_Week_in_React), with Lorenzo Sciandra from Microsoft
+- [Module Federation](https://www.callstack.com/podcasts/module-federation?utm_campaign=Podcast&utm_source=email&utm_content=This_Week_in_React) dans React Native, avec Zack Jackson, mainteneur de Webpack.
+- [React Native et la nouvelle architecture](https://www.callstack.com/podcasts/react-native-new-architecture-ep-17?utm_campaign=Podcast&utm_source=email&utm_content=This_Week_in_React), avec Nicola Corti de Meta.
+- [React Native chez Microsoft](https://www.callstack.com/podcasts/react-native-at-microsoft-ep-16?utm_campaign=Podcast&utm_source=email&utm_content=This_Week_in_React), avec Lorenzo Sciandra de Microsoft.
 
-**[The React Native Show](https://www.callstack.com/podcast-react-native-show?utm_campaign=Podcast&utm_source=email&utm_content=This_Week_in_React)** is a podcast series hosted by Callstack. Each episode explores a different topic in detail. The host dives deep into every discussion with his guests - world experts in the field.
+**[The React Native Show](https://www.callstack.com/podcast-react-native-show?utm_campaign=Podcast&utm_source=email&utm_content=This_Week_in_React)** est un podcast hébergé par Callstack. Chaque épisode explore en détail un sujet différent. L'animateur se plonge dans chaque discussion avec ses invités - des experts internationaux du domaine.
 
 ---
 
